--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
-* {
-    background-color: rgb(8, 132, 229);
+body {
+    /*background-color: rgb(8, 132, 229, 0.6);*/
+    background: linear-gradient(to top, rgb(8, 132, 229, 0.7), rgb(232, 227, 22, 0.2)) fixed;
 }
 
 h1 {
     font-family: sans-serif;
     font-size: 30px;
     display: inline-block;
-    margin-left: 200px;
-    margin-right: 200px;
+    text-align: center;
 }
 
 button {
@@ -28,18 +28,46 @@ p {
 
 canvas#transparentCanvas {
     display: inline-block;
+    margin-left: 500px;
     margin-right: 50px;
     margin-top: 50px;
+    align-content: right;
 }
 
 canvas#rubiksCanvas {
     display: inline-block;
     margin-left: 50px;
+    margin-right: 500px;
     margin-top: 50px;
+    align-content: left;
 }
 
 img {
     width: auto;
     height: auto;
     display: inline-block;
+}
+
+a {
+    margin-left: 50px;
+}
+
+a:link {
+    color: blue;
+    text-decoration: none;
+}
+
+a:visited {
+    color: green;
+    text-decoration: none;
+}
+
+a:hover {
+    color: hotpink;
+    text-decoration: underline;
+}
+
+a: active {
+    color: chocolate;
+    text-decoration: underline;
 }
