--- a/style.css
+++ b/style.css
@@ -49,25 +49,51 @@ img {
 }
 
 a {
-    margin-left: 50px;
+    /*margin-left: 50px;*/
 }
 
 a:link {
-    color: blue;
+    color: black;
     text-decoration: none;
 }
 
 a:visited {
-    color: green;
+    color: black;
     text-decoration: none;
 }
 
 a:hover {
-    color: hotpink;
+    color: green;
     text-decoration: underline;
 }
 
 a: active {
-    color: chocolate;
+    color: purple;
     text-decoration: underline;
+}
+
+a#linkedin {
+    color: white;
+    text-decoration: none;
+}
+
+.fa {
+    padding: 10px 10px 0px 10px;
+    font-size: 40px;
+    text-align: center;
+    margin-left: 50px;
+    height: 50px;
+    width: 50px;
+}
+
+.fa:hover{
+    opacity: 0.7;
+}
+
+.fa-github-square {
+    background: rgb(255, 125, 0);
+}
+
+.fa-linkedin {
+    background: #3B5998;
 }
