--- a/style.css
+++ b/style.css
@@ -1,24 +1,22 @@
 body {
     background-color: #131313;
-}
-
-h1#about-me-h1 {
-    margin-top: 60px
+    margin-top: 200px;
+    margin-bottom: 200px;
 }
 
 h1, h2, h3 {
-    margin-left: 50px;
+    margin-left: 200px;
     font-family: sans-serif;
     color: #DFDFDF;
 }
 
 button#drawBtn {
     background-color: bisque;
-    width: 100px;
+    width: 200px;
     height: 60px;
     font-family: sans-serif;
     font-size: 20px;
-    margin-left: 50px;
+    margin-left: 200px;
     display: none;
     color: #989898;
 }
@@ -26,7 +24,8 @@ button#drawBtn {
 p {
     font-family: sans-serif;
     font-size: 18px;
-    margin-left: 50px;
+    margin-left: 200px;
+    margin-right: 200px;
     color: #DFDFDF;
 }
 
@@ -80,7 +79,7 @@ a#linkedin {
     padding: 10px 10px 0px 10px;
     font-size: 40px;
     text-align: center;
-    margin-left: 50px;
+    margin-left: 200px;
     height: 50px;
     width: 50px;
 }
