--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ p {
 .cube {
     display: block;
     margin-top: 50px;
+    margin-bottom: 50px;
     margin-left: auto;
     margin-right: auto;
 }
