--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ p {
     display: block;
     margin-top: 50px;
     margin-bottom: 50px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .fa {
